Added final layer and removed unnecessary variables

--- a/Keras_train.ipynb
+++ b/Keras_train.ipynb
@@ -39,38 +39,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mCzVr55e-Xza",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 85
-        },
-        "outputId": "d61be2cb-8959-4164-8568-8e6c57bfc7f9"
-      },
-      "source": [
-        "%env TIME_CLIP=1000\n",
-        "%env MFCC_DIM = 10\n",
-        "%env FRAME_DIM = 49\n",
-        "%env INPUT_SHAPE = (MFCC_DIM, FRAME_DIM\n",
-        "#%env BN=True"
-      ],
-      "execution_count": 20,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "env: TIME_CLIP=1000\n",
-            "env: MFCC_DIM=10\n",
-            "env: FRAME_DIM=49\n",
-            "env: INPUT_SHAPE=(MFCC_DIM, FRAME_DIM\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "0DrgEh1EKJBu",
         "colab_type": "code",
         "colab": {}
@@ -82,6 +50,17 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Sh0hc37amv70",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Building the DS_CNN Network\n",
+        "This network containst 5 layers. First layer is a convolutional neural network and the remaining layers are depthwise separable."
+      ]
     },
     {
       "cell_type": "code",
@@ -187,8 +166,15 @@
         "                                              gamma_regularizer=None, beta_constraint=None, gamma_constraint=None))\n",
         "      model.add(layers.ReLU(max_value=None, negative_slope=0.0, threshold=0.0))\n",
         "\n",
+        "      # Final layer\n",
+        "      model.add(layers.AveragePooling2D(pool_size=(5, 25), strides=(2,2), padding='valid', data_format=None))\n",
+        "      model.add(layers.Flatten(data_format=None))\n",
+        "      model.add(layers.Dense(64, activation='relu'))\n",
+        "      model.add(layers.Dense(10, activation='softmax'))\n",
+        "  \n",
         "\n",
-        "\n",
+        "  \n",
+        "  \n",
         "      # Restarts layer sequence number \n",
         "      K.clear_session()\n",
         "\n",
@@ -204,16 +190,16 @@
       "metadata": {
         "id": "yiLUN--y0u79",
         "colab_type": "code",
-        "outputId": "6df48869-40ff-42fb-d8c9-d9d3d47df68d",
+        "outputId": "434369bb-7533-4bce-8559-79f20650e69c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 748
+          "height": 884
         }
       },
       "source": [
         "model.summary()"
       ],
-      "execution_count": 27,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -256,37 +242,23 @@
             "conv2d_5 (Conv2D)            (None, 5, 25, 64)         4096      \n",
             "_________________________________________________________________\n",
             "re_lu_9 (ReLU)               (None, 5, 25, 64)         0         \n",
+            "_________________________________________________________________\n",
+            "average_pooling2d_1 (Average (None, 1, 1, 64)          0         \n",
+            "_________________________________________________________________\n",
+            "flatten_1 (Flatten)          (None, 64)                0         \n",
+            "_________________________________________________________________\n",
+            "dense_1 (Dense)              (None, 64)                4160      \n",
+            "_________________________________________________________________\n",
+            "dense_2 (Dense)              (None, 10)                650       \n",
             "=================================================================\n",
-            "Total params: 37,952\n",
-            "Trainable params: 37,952\n",
+            "Total params: 42,762\n",
+            "Trainable params: 42,762\n",
             "Non-trainable params: 0\n",
             "_________________________________________________________________\n"
           ],
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "aKoVSl3ibtmd",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "def test_my_model(self):\n",
-        "  np.random.seed(1976)\n",
-        "  mfcc_dim = 10\n",
-        "  frame_dim = 49\n",
-        "  input_shape = (mfcc_dim, fram_dim, 1)\n",
-        "  depth_multiplier = 1\n",
-        "  kernel_height = 3\n",
-        "  kernel_width = 3\n",
-        "  num_kernels = 64\n",
-        "  "
-      ],
-      "execution_count": 0,
-      "outputs": []
     }
   ]
 }
